banner places+admin panel

--- a/profapp/templates/company/company_base_angular.html
+++ b/profapp/templates/company/company_base_angular.html
@@ -11,6 +11,7 @@
         $scope.url_company_employees = {{ raw_url_for('company.employees')|safe }};
         $scope.url_portal_publications = {{ raw_url_for('portal.publications')|safe }};
         $scope.url_portal_tags = {{ raw_url_for('portal.tags')|safe }};
+        $scope.url_portal_banners = {{ raw_url_for('portal.portal_banners')|safe }};
         $scope.url_company_readers = {{ raw_url_for('company.readers')|safe }};
         $scope.url_portal_portals_partners = {{ raw_url_for('portal.portals_partners')|safe }};
 
@@ -50,6 +51,8 @@
 
             <div class="row">
                 <div ng-if="company.own_portal" class="col-lg-12 col-md-12 col-sm-12 col-xs-12 company-portal">
+                    <a ng-class="{'selected': selected_company_menu == 'portal_banners'}"
+                       href="{{ url_portal_banners({company_id: company.id}) }}">{{ _('Banners') }}</a>
                     <a ng-class="{'selected': selected_company_menu == 'portal_tags'}"
                        href="{{ url_portal_tags({company_id: company.id}) }}">{{ _('Tags') }}</a>
                     <a ng-class="{'selected': selected_company_menu == 'publications'}"
