--- a/profapp/templates/front/bird/layout.html
+++ b/profapp/templates/front/bird/layout.html
@@ -39,21 +39,9 @@
             {% endif %}
         </div>
         <div class="col-md-3">
-            {{ portal.advs['right_banner']|safe }}
-            {% if articles_related %}
-                <div class="right-list-container">
-                    {% for article_related_id, related_article  in articles_related.items() %}
-                        <div class="list-elements right-sidebar oh">
-                            <a href="{{ url_for('front.details', article_portal_division_id=related_article['id']) }}">{{ related_article['title']|safe }}</a>
+            {{ portal.advs['right_banner_1']|safe }}
+            {{ portal.advs['right_banner_2']|safe }}
 
-                            <div class="item-additional-info">
-                                <div class="item-company"><a href="{{ url_for('front.subportal', member_company_id = related_article['company']['id'], member_company_name = related_article['company']['name']) }}">{{ related_article['company']['name'] }}</a></div>
-                                <div class="item-publication-date">{{ related_article['publishing_tm'] }}</div>
-                            </div>
-                        </div>
-                    {% endfor %}
-                </div>
-            {% endif %}
 
         </div>
 
