banner places fixes

--- a/profapp/templates/partials/pager.html
+++ b/profapp/templates/partials/pager.html
@@ -43,7 +43,7 @@
                     </li>
                 </ul>
                 <div class="col-md-3">
-                    <a href="#" class="right-banner bottom_banner_1">{{ portal.advs['bottom_banner']|safe }}</a>
+                    <a href="#" class="bottom_banner_1">{{ portal.advs['bottom_banner']|safe }}</a>
                 </div>
             </div>
         </div>
