tags selection in publication dialog

--- a/profapp/templates/_ruslan/_index_layout.html
+++ b/profapp/templates/_ruslan/_index_layout.html
@@ -80,6 +80,10 @@
     <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.4.9/angular-touch.js"></script>
 
 
+    <link href="//static.profireader.com/static/new/angular-ui-select/select.min.css" rel="stylesheet">
+    <script src="//static.profireader.com/static/new/angular-ui-select/select.min.js"></script>
+
+
     <script src="//static.profireader.com/static/new/moment/moment.min.js"></script>
     {% if g.lang != 'en' %}<script src="//static.profireader.com/static/new/moment/{{ g.lang }}.js"></script>{% endif %}
     <script type="text/javascript"  src="//static.profireader.com/static/new/eonasdan-bootstrap-datetimepicker/bootstrap-datetimepicker.min.js"></script>
