--- a/profapp/templates/portal/tags.html
+++ b/profapp/templates/portal/tags.html
@@ -46,7 +46,7 @@
 
             $scope.add_tag = function () {
                 var newTagId = randomHash();
-                $scope.data.portal.tags.push({'id': newTagId, 'tag': $scope.new_tag});
+                $scope.data.portal.tags.push({'id': newTagId, 'text': $scope.new_tag});
                 for (var division_ind = 0; division_ind < $scope.data.portal.divisions.length; division_ind++) {
                     $scope.data.portal.divisions[division_ind].tags[newTagId] = true;
                 }
@@ -88,7 +88,7 @@
             <br style="clear: both"/>
             <div class="pr-table col-lg-12 col-md-12 col-sm-12 col-xs-12">
                 <div class="pr-row">
-                    <div class="pr-cell">tag name</div>
+                    <div class="pr-cell">tag text</div>
                     <div class="pr-cell">description</div>
                     <div class="pr-cell" ng-repeat="division in data.portal.divisions">{{ _('show in `%(name)s`',
                         division) }}</div>
@@ -97,7 +97,7 @@
                 <div class="pr-row" ng-repeat="tag in data.portal.tags">
                     <div class="pr-cell"><input class="w100"
                             pr-validation-answer="data_validation:tags[tag.id]"
-                            ng-disabled="!editing || tags_to_remove[tag.id]" ng-model="tag.tag"/></div>
+                            ng-disabled="!editing || tags_to_remove[tag.id]" ng-model="tag.text"/></div>
                     <div class="pr-cell"><textarea rows="3" class="w100"
                             ng-disabled="!editing || tags_to_remove[tag.id]" ng-model="tag.description"></textarea></div>
                     <div class="pr-cell" ng-repeat="division in data.portal.divisions">
