--- a/profapp/templates/partials/article_details.html
+++ b/profapp/templates/partials/article_details.html
@@ -8,13 +8,10 @@
             </div>
     </div>
 
-    {% if article['tags'] %}
-        <div class="item-tags fr">
-            {% for tag in article['tags'] %}
-                <span class="label label-danger"><a href="{{ url_for('front.division',
-                    division_name=article['division']['name'], page=1, search_text='', tag=tag.text) }}">{{ tag.text }}</a></span>
-            {% endfor %}
-        </div>
+    {% if article['tags'] %}<span
+                    class="label label-danger item-tags fr"><a href="{{ url_for('front.division',
+                    division_name=article['division']['name'], page=1, search_text='', tag=article.tags[0].text) }}">{{ article.tags[0]
+                    .text }}</a></span>
     {% endif %}
 
     <h2 class="item-title">{{ article['title']|safe }}</h2>
