--- a/profapp/templates/partials/reader/bak.reader_content.html
+++ b/profapp/templates/partials/reader/bak.reader_content.html
@@ -11,12 +11,10 @@
         <h2 class="item-title">
 {#            <a href="{{ url_for('reader.details_reader', article_portal_division_id=article_id) }}">{{ article['title']|safe }}</a>#}
             {{ article['subtitle']|safe }}
-            {% if article['tags'] %}
-                <span class="tag-in-article">
-                    {% for tag in article['tags'] %}
-                        <a href="#">{{ tag }}</a>
-                    {% endfor %}
-                </span>
+            {% if article['tags'] %}<span
+                    class="label label-danger item-tags fr"><a href="{{ url_for('front.division',
+                    division_name=article['division']['name'], page=1, search_text='', tag=article.tags[0].text) }}">{{ article.tags[0]
+                    .text }}</a></span>
             {% endif %}
         </h2>
         <div class="item-short-content">
