--- a/profapp/templates/front/bird/articles-list.html
+++ b/profapp/templates/front/bird/articles-list.html
@@ -52,8 +52,7 @@
             <a href="{{ url_for('front.division', division_name=article['division']['name'], page=1, search_text='') }}">{{ article['division']['name']|safe }}</a>
             {% if article['tags'] %}<span
                     class="label label-danger item-tags fr"><a href="{{ url_for('front.division',
-                    division_name=article['division']['name'], page=1, search_text='', tag=article.tags[0].text) }}">{{ article.tags[0]
-                    .text }}</a></span>
+                    division_name=article['division']['name'], page=1, search_text='', tag=article.tags[0].text) }}">{{ article.tags[0].text }}</a></span>
             {% endif %}
 
         </div>
