--- a/profapp/templates/partials/article_details.html
+++ b/profapp/templates/partials/article_details.html
@@ -8,10 +8,13 @@
             </div>
     </div>
 
-    {% if article['tags'] %}<span
-                    class="label label-danger item-tags fr"><a href="{{ url_for('front.division',
-                    division_name=article['division']['name'], page=1, search_text='', tag=article.tags[0].text) }}">{{ article.tags[0]
-                    .text }}</a></span>
+    {% if article['tags'] %}
+        <div class="item-tags fr">
+            {% for tag in article['tags'] %}
+                <span class="label label-danger"><a href="{{ url_for('front.division',
+                    division_name=article['division']['name'], page=1, search_text='', tag=tag.text) }}">{{ tag.text }}</a></span>
+            {% endfor %}
+        </div>
     {% endif %}
 
     <h2 class="item-title">{{ article['title']|safe }}</h2>
