--- a/profapp/templates/company/material_details.html
+++ b/profapp/templates/company/material_details.html
@@ -43,7 +43,7 @@
                 $scope.loading = true;
                 $ok('', data, function (resp) {
                     callback(resp.portals);
-                    $scope.data = resp;
+                    $scope.data = resp
                 }).finally(function(){
                     $scope.loading = false
                 });
@@ -62,9 +62,8 @@
 
             $scope.grid_action = function (id, action, row, column_name) {
                 'use strict';
-                console.log($scope.data)
                 if (action === 'EDIT') {
-                    window.location.href = $scope.url_update_material({'company_id':$scope.data.company.id,'publication_id': row['publication']['id']});
+                    window.location.href = $scope.url_update_material({'company_id':row['company_id'],'publication_id': row['publication']['id']});
                     return;
                 }
 
@@ -74,11 +73,11 @@
                                 row['publication']['id'],
                         action: action,
                         portal_id: row['id'],
-                        company_id: $scope.data.company['id']
+                        company_id: row['company_id']
                     });
 
                     modalInstance.result.then(function (updated_row) {
-                        $scope.grid_change_row($scope.data.portals, updated_row);
+                        $scope.gridApi.grid.grid_change_row(updated_row);
                     });
                 }
             };
