--- a/profapp/templates/portal/portal_publications.html
+++ b/profapp/templates/portal/portal_publications.html
@@ -38,8 +38,6 @@
                 $scope.loading = true
                 $ok($scope.url_search_article({company_id: $scope.company.id}), data, function (resp) {
                     callback(resp);
-                    $scope.data = resp;
-                    callback($scope.data);
                 }).finally(function(){
                     $scope.loading = false
                 });
@@ -55,12 +53,12 @@
                     var modalInstance = $publish({
                         material_or_publication_id: row['id'],
                         action: action,
-                        portal_id: $scope.data.portal['id'],
-                        company_id: $scope.company['id']
+                        portal_id: row['portal']['id'],
+                        company_id: row['company']['id']
                     });
 
                     modalInstance.result.then(function (updated_row) {
-                        $scope.grid_change_row($scope.data, updated_row['publication']);
+                        $scope.gridApi.grid.grid_change_row(updated_row['publication']);
                     });
                 }
 
