--- a/profapp/templates/company/portals_partners.html
+++ b/profapp/templates/company/portals_partners.html
@@ -68,9 +68,8 @@
                     company_id: $scope.company_id,
                     portal_id: row.portal.id
                 }), {action: action, who: row.who, partner_id: $scope.company_id}, function (resp) {
-                }).finally(function () {
-                    $scope.gridApi.grid.setGridData();
-                })
+                    $scope.gridApi.grid.grid_change_row(resp)
+                }).finally(function () {})
             };
 
             $scope.portal_link = function (link) {
