accept license+stupi work

--- a/profapp/templates/_ruslan/partials/_user_menu.html
+++ b/profapp/templates/_ruslan/partials/_user_menu.html
@@ -7,8 +7,8 @@
             </div>
 
             <div class="modal-footer">
-            <button pr-test="AcceptLicence" type="button" class="btn btn-default" ng-click="accept_tos('accept')">Accept</button>
-            <button pr-test="DeclineLicence" type="button" class="btn btn-default" ng-click="accept_tos('decline')">Decline</button>
+            <button pr-test="AcceptLicence" type="button" class="btn btn-default" ng-click="accept_tos('accept')">{{ __('Accept') }}</button>
+            <button pr-test="DeclineLicence" type="button" class="btn btn-default" ng-click="accept_tos('decline')">{{ __('Decline') }}</button>
             </div>
         </div>
     </script>
