--- a/profapp/templates/admin/ips.html
+++ b/profapp/templates/admin/ips.html
@@ -1,6 +1,6 @@
 {% extends "index_lazy_layout.html" %}
 
-{% block title %}Profireader - Ips{% endblock title %}
+{% block title %}Profireader - {{ _('Ips') }}{% endblock title %}
 
 {% block portal_content %}
 
