--- a/profapp/templates/article/details.html
+++ b/profapp/templates/article/details.html
@@ -1,6 +1,6 @@
 {% extends "index_lazy_layout.html" %}
 
-{% block title %}Article history{% endblock title %}
+{% block title %}{{ _('Article history') }}{% endblock title %}
 
 {% block portal_content %}
 
