--- a/profapp/templates/auth/confirm_email.html
+++ b/profapp/templates/auth/confirm_email.html
@@ -1,5 +1,5 @@
 {% extends "_ruslan/_index_layout.html" %}
-{% block title %}Profireader - Confirmation{% endblock title %}
+{% block title %}Profireader - {{ _('Confirmation') }}{% endblock title %}
 {% block head %}
     {{ super() }}
 {% endblock head %}
