--- a/profapp/templates/auth/reset_password.html
+++ b/profapp/templates/auth/reset_password.html
@@ -1,5 +1,5 @@
 {% extends "index_lazy_layout.html" %}
-{% block title %}Profireader - Password Reset{% endblock title %}
+{% block title %}Profireader - {{ _('Password Reset') }}{% endblock title %}
 {% block head %}
     {{ super() }}
 {% endblock head %}
