--- a/profapp/templates/auth/reset_password_token.html
+++ b/profapp/templates/auth/reset_password_token.html
@@ -1,6 +1,6 @@
 {% extends "index_lazy_layout.html" %}
 
-{% block title %}Profireader - Articles list{% endblock title %}
+{% block title %}Profireader - {{ _('Articles list') }}{% endblock title %}
 
 {% block portal_content %}
 <script>
