--- a/profapp/templates/company/companies_partners.html
+++ b/profapp/templates/company/companies_partners.html
@@ -1,6 +1,6 @@
 {% extends "index_lazy_layout.html" %}
 
-{% block title %}Profireader{% endblock title %}
+{% block title %}Profireader - {{ _('Partners') }}{% endblock title %}
 
 {% block head %}
     {{ super() }}
